# sophon-WeNet

./: README.md
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/include/: processor.h  util.h  utils.hpp  wenet.h  wrapper.h
cpp/src/: processor.cpp  util.cpp  wenet.cpp  wrapper.cpp
python/: README.md  wenet.py
python/utils/: sophon_inference.py
scripts/: gen_fp32bmodel_nntc.sh
